# vetosh

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/realtime-data-indexing/: README.md  config.yaml  docker-compose.yml  prepare_dataset.py  run_bench.py  tests_bench_guard.py
benchmarks/realtime-data-indexing/compat/: finite_shim.c
demos/: README.md  generate_demos.py
docs/: README.md  ROADMAP.md  generate_demos.py
examples/: config.yaml
examples/testrun/: README.md  config.yaml
examples/testrun/documents/: 01-what-is-vetosh.md  02-pathway-live-data.md  03-persistence-and-caching.md  04-vector-databases.md  05-running-the-stack.md
serviette/: __init__.py  cli.py  testing.py  up.py
serviette/config/: __init__.py  schema.py
serviette/demo/: __init__.py
serviette/demo/corpus/: faq.md  pricing.md  release-notes.md
serviette/frontend/: config.py  main.py
serviette/indexer/: __init__.py  config.py  fingerprint.py  graph.py  main.py  prepare.py  sources.py
serviette/quickstart/: __init__.py  wizard.py
serviette/server/: __init__.py  bm25.py  config.py  decompose.py  embedder.py  hybrid.py  llm.py  main.py  ranking.py  reranker.py
serviette/server/accessors/: __init__.py  abstract.py  chroma.py  duckdb.py  milvus.py  mongodb.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
tests/: _milvus_writer.py  conftest.py  dockerutil.py  integration_common.py  test_cache.py  test_cli_preflight.py  test_demo.py  test_demo_path.py  test_fingerprint.py  test_frontend.py  test_hybrid.py  test_indexer.py  test_integration_chroma.py  test_integration_duckdb.py  test_integration_milvus.py  test_integration_mongodb.py  test_integration_pgvector.py  test_integration_pinecone.py  test_integration_qdrant.py  test_integration_s3.py  test_integration_weaviate.py  test_multimodal_parsers.py  test_qdrant_hybrid.py  test_quickstart.py  test_rag_quality.py  test_server.py  test_sources.py  test_up.py
vetosh/: __init__.py  cli.py  testing.py  up.py
vetosh/config/: __init__.py  schema.py
vetosh/demo/: __init__.py
vetosh/demo/corpus/: onboarding.md  overview.md
vetosh/frontend/: __init__.py  config.py  main.py
vetosh/frontend/static/: index.html
vetosh/indexer/: __init__.py  cache.py  config.py  fingerprint.py  graph.py  main.py  prepare.py  sources.py
vetosh/quickstart/: __init__.py  wizard.py
vetosh/server/: config.py  embedder.py  llm.py  main.py
vetosh/server/accessors/: __init__.py  abstract.py  chroma.py  duckdb.py  milvus.py  mongodb.py  pgvector.py  pinecone.py  qdrant.py  sqlite.py  weaviate.py
